--- a/gallery.html
+++ b/gallery.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Green Thumb Garden Centre</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="https://via.placeholder.com/50x50" alt="Green Thumb Logo">
+                <img src="images/logo.png" alt="Green Thumb Logo">
                 <span>Green Thumb</span>
             </div>
             <ul>
@@ -28,12 +28,8 @@
         <section id="gallery">
             <h1>Our Gallery</h1>
             <div class="image-gallery">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 1">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 2">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 3">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 4">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 5">
-                <img src="https://via.placeholder.com/300x200" alt="Garden 6">
+                <img src="images/garden1.jpg" alt="Garden 1">
+                <img src="images/garden2.jpg" alt="Garden 2">
                 <!-- Add more images as needed -->
             </div>
         </section>
@@ -69,6 +65,6 @@
         </div>
         <p class="copyright">&copy; 2023 Green Thumb Garden Centre. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
