--- a/products.html
+++ b/products.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Green Thumb Garden Centre</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="https://via.placeholder.com/50x50" alt="Green Thumb Logo">
+                <img src="images/logo.png" alt="Green Thumb Logo">
                 <span>Green Thumb</span>
             </div>
             <ul>
@@ -29,7 +29,7 @@
             <h1>Our Products</h1>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200x200" alt="Plant">
+                    <img src="images/flowering-shrub.jpg" alt="Plant">
                     <h3>Flowering Shrub</h3>
                     <p class="price">$29.99</p>
                     <a href="#" class="button">Add to Cart <i class="fas fa-cart-plus"></i></a>
@@ -81,6 +81,6 @@
         </div>
         <p class="copyright">&copy; 2023 Green Thumb Garden Centre. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
